<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/common_title_bar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/address_receiver_name"
            android:textColor="@color/color_333333"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:background="@color/white"
            android:hint="@string/feedback_input_content"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/color_666666"
            android:textColorHint="@color/color_CCCCCC"
            android:textSize="15sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/view_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/address_phone"
            android:textColor="@color/color_333333"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:background="@color/white"
            android:hint="@string/feedback_input_content"
            android:inputType="phone"
            android:maxLength="11"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/color_666666"
            android:textColorHint="@color/color_CCCCCC"
            android:textSize="15sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/view_line" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_centerVertical="true"
            android:text="@string/house_number"
            android:textColor="@color/color_333333"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_unit_number"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:background="@color/white"
            android:hint="@string/please_enter_house_number"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/color_666666"
            android:textColorHint="@color/color_CCCCCC"
            android:textSize="15sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/view_line" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:maxLines="1"
            android:singleLine="true"
            android:ellipsize="end"
            android:text="@string/street_number"
            android:textColor="@color/color_333333"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_street_number"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="right"
            android:hint="@string/please_enter_street_number"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/color_666666"
            android:textColorHint="@color/color_CCCCCC"
            android:textSize="15sp" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/view_line" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:maxLines="1"
            android:singleLine="true"
            android:ellipsize="end"
            android:text="@string/street_name"
            android:textColor="@color/color_333333"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_detail_address"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="right"
            android:hint="@string/please_enter_street_name"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/color_666666"
            android:textColorHint="@color/color_CCCCCC"
            android:textSize="15sp" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/view_line" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/address_area"
            android:textColor="@color/color_333333"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_area"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableRight="@mipmap/icon_mine_right_black"
            android:padding="15dp"
            android:gravity="right"
            android:drawablePadding="12dp"
            android:singleLine="true"
            android:text="@string/address_select"
            android:textColor="@color/color_666666"
            android:textColorHint="@color/color_CCCCCC"
            android:textSize="15sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/view_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/address_state"
            android:textColor="@color/color_333333"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_state"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableRight="@mipmap/icon_mine_right_black"
            android:padding="15dp"
            android:gravity="right"
            android:drawablePadding="12dp"
            android:singleLine="true"
            android:text="@string/address_select"
            android:textColor="@color/color_666666"
            android:textColorHint="@color/color_CCCCCC"
            android:textSize="15sp" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/view_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/address_zip_code"
            android:textColor="@color/color_333333"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_zip_code"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:focusable="false"
            android:enabled="false"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/color_666666"
            android:textColorHint="@color/color_CCCCCC"
            android:textSize="15sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/bg_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/address_default"
            android:textColor="@color/color_333333"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_setting_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:src="@mipmap/icon_kai" />

    </RelativeLayout>

</LinearLayout>