<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_FFFFFF"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/common_title_bar" />

    <ImageView
        android:id="@+id/iv_payment_successful"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="65dp"
        android:scaleType="center"
        android:src="@mipmap/icon_zhifuchenggong" />

    <TextView
        android:id="@+id/tv_payment_successful"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="17dp"
        android:text="@string/order_payment_successful"
        android:textColor="@color/color_333333"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/payment_amount"
                android:textColor="@color/color_666666"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_payment_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/goods_price"
                android:textColor="@color/color_EC4113"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"

            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_method_parameter"
                android:textColor="@color/color_666666"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tv_payment_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/color_666666"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_check_order"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/check_order"
            android:paddingLeft="26dp"
            android:paddingRight="26dp"
            android:layout_marginRight="8dp"
            android:textColor="@color/color_666666"
            android:background="@drawable/shape_payment_result_check_order_btn_bg"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_back_to_home"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:paddingLeft="26dp"
            android:paddingRight="26dp"
            android:text="@string/back_to_home"
            android:background="@drawable/shape_payment_result_back_home_btn_bg"
            android:layout_marginLeft="8dp"
            android:textColor="@color/color_EC5413"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>