<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_shop_cart_delete_dialog_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/color_333333"
        android:layout_marginTop="20dp"
        android:text="@string/do_you_confirm_deletion"/>
    <View
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="0.05dp"
        android:background="@color/color_999999"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/shop_cart_cancel"
            android:textSize="16sp"
            android:textColor="@color/color_666666"
            android:background="#00000000"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="0.05dp"
            android:layout_height="match_parent"
            android:background="@color/color_999999"/>
        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/positive"
            android:textSize="16sp"
            android:textColor="@color/color_EC5413"
            android:background="#00000000"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>